listings/ch10-generic-types-traits-and-lifetimes/listing-10-07/output.txt
$ cargo run
   Compiling capitolo10 v0.1.0 (file:///progetti/capitolo10)
error[E0308]: mismatched types
 --> src/main.rs:7:44
  |
7 |     let non_funzionante = Punto { x: 5, y: 4.0 };
  |                                            ^^^ expected integer, found floating-point number

For more information about this error, try `rustc --explain E0308`.
error: could not compile `capitolo10` (bin "capitolo10") due to 1 previous error
